force-app/main/default/objects/InventoryReport__c/InventoryReport__c.object-meta.xml
<CustomObject>
    <label>INV Report</label>
    <nameField>
        <displayFormat>IV-{000000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INV Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>