force-app/main/default/objects/InventoryReport__c/fields/ClosingQuantity__c.field-meta.xml
<CustomField>
    <fullName>ClosingQuantity__c</fullName>
    <label>Closing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>