force-app/main/default/objects/InventoryReport__c/fields/ClosingQuantityVerification__c.field-meta.xml
<CustomField>
    <fullName>ClosingQuantityVerification__c</fullName>
    <formula>StockInQuantity__c - StockOutQuantity__c +   ReconcileQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Quantity Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>