force-app/main/default/objects/InventoryReport__c/fields/FacilityID__c.field-meta.xml
<CustomField>
    <fullName>FacilityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>INVENTORY REPORT</relationshipLabel>
    <relationshipName>InventoryReport</relationshipName>
    <type>Lookup</type>
</CustomField>