force-app/main/default/objects/InventoryReport__c/fields/InventoryLogID__c.field-meta.xml
<CustomField>
    <fullName>InventoryLogID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Log ID</label>
    <referenceTo>InventoryLog__c</referenceTo>
    <relationshipLabel>INVENTORY REPORT</relationshipLabel>
    <relationshipName>InventoryReport</relationshipName>
    <type>Lookup</type>
</CustomField>