force-app/main/default/objects/InventoryReport__c/fields/OpeningQuantity__c.field-meta.xml
<CustomField>
    <fullName>OpeningQuantity__c</fullName>
    <formula>PreviousInventoryReportID__r.ClosingQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>