force-app/main/default/objects/InventoryReport__c/fields/PreviousInventoryReportID__c.field-meta.xml
<CustomField>
    <fullName>PreviousInventoryReportID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Inventory Report ID</label>
    <referenceTo>InventoryReport__c</referenceTo>
    <relationshipLabel>NEXT INVENTORY REPORT</relationshipLabel>
    <relationshipName>InventoryReport</relationshipName>
    <type>Lookup</type>
</CustomField>