force-app/main/default/objects/InventoryReport__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>INVENTORY REPORT</relationshipLabel>
    <relationshipName>InventoryReport</relationshipName>
    <type>Lookup</type>
</CustomField>