force-app/main/default/objects/InventoryReport__c/fields/ReconcileQuantityInPeriod__c.field-meta.xml
<CustomField>
    <fullName>ReconcileQuantityInPeriod__c</fullName>
    <formula>ReconcileQuantity__c -  PreviousInventoryReportID__r.ReconcileQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reconcile Quantity in Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>