force-app/main/default/objects/InventoryReport__c/fields/ReportPeriodType__c.field-meta.xml
<CustomField>
    <fullName>ReportPeriodType__c</fullName>
    <label>Report Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReportFrequencyType</valueSetName>
    </valueSet>
</CustomField>