force-app/main/default/objects/InventoryReport__c/fields/StockInQuantity__c.field-meta.xml
<CustomField>
    <fullName>StockInQuantity__c</fullName>
    <label>Stock-In Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>