force-app/main/default/objects/InventoryReport__c/fields/StockOutQuantity__c.field-meta.xml
<CustomField>
    <fullName>StockOutQuantity__c</fullName>
    <label>Stock-Out Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>