force-app/main/default/objects/InventoryReport__c/fields/StockOutQuantityInPeriod__c.field-meta.xml
<CustomField>
    <fullName>StockOutQuantityInPeriod__c</fullName>
    <formula>StockOutQuantity__c -PreviousInventoryReportID__r.StockOutQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock-Out Quantity in Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>