force-app/main/default/objects/InventoryReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductID__c</columns>
    <columns>FacilityID__c</columns>
    <columns>InventoryLogID__c</columns>
    <columns>ReportPeriodType__c</columns>
    <columns>PreviousInventoryReportID__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OpeningQuantity__c</columns>
    <columns>StockInQuantity__c</columns>
    <columns>StockOutQuantity__c</columns>
    <columns>ClosingQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>